# creator-toolkit

./: .gitignore  .gitmodules  AGENTS.md  README.md
backend/audio-sep/: gradio_app.py  main.py  pyproject.toml  setup.sh
backend/dynamic-face-mosaic/: README.md  face_mosaic.py  pyproject.toml  scrfd_face_mosaic.py  yolo_face_mosaic.py
backend/tts/chatterbox-turbo/: README.md  api_server.py  gradio_tts_turbo_app.py  main.py  pyproject.toml
backend/tts/qwen3-tts/: .gitignore  README.md  main.py  pyproject.toml  run_server.sh
backend/tts/qwen3-tts/scripts/: batch_tts.py  create_speaker.py  tts.py
backend/tts/qwen3-tts/src/fs_qwen3_tts_server/: __init__.py  cache.py  client.py  models.py  routes.py  serialize.py  tts.py
frontend/: package.json  pnpm-lock.yaml
