[project]
name = "qwen3-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "flash-attn",
    "fs-pyutils>=0.1.0",
    "httpx>=0.27.0",
    "pyloudnorm>=0.2.0",
    "qwen-tts>=0.1.1",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu126torch2.10-cp314-cp314-linux_x86_64.whl" }
fs-pyutils = { git = "https://github.com/fseasy/fs-pyutils" }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[tool.ruff]
line-length = 120
indent-width = 2


[tool.ruff.lint]
# 确保 "I" (isort) 规则在启用列表中
select = ["E", "F", "B", "UP", "I", "RET"]

[tool.ruff.lint.isort]
# 这里可以像 isort 一样自定义配置
force-single-line = false # 是否强制单行导入
combine-as-imports = true # 是否合并 import as

[tool.ruff.lint.per-file-ignores]
"**/routes*.py" = ["B008"] # avoid warning on `Depends()` in route signature

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fs_qwen3_tts_server"]
